--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -4,7 +4,7 @@ html(lang="en-GB")
 		meta(charset="utf-8")
 		title Hyperfantasy: Design &amp; Devlopment Team
 		meta(name="robots", content="index, follow")
-		meta(name="og:title", property="og:title", content="Hyperfantasy Design & Devlopment Team")
+		meta(name="og:title", property="og:title", content="Hyperfantasy Design &amp; Devlopment Team")
 		meta(name="description", content="We are Hyperfantasy, we are creative team that love to solve problem &amp; building awesome digital products. Let’s work together!")
 		meta(charset='utf-8')
 		meta(http-equiv='X-UA-Compatible', content='IE=edge')
