--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -36,7 +36,8 @@ html(lang="en-GB")
 		noscript
 			iframe(src="https://www.googletagmanager.com/ns.html?id=GTM-WCSQP5F", height="0", width="0", style="display:none;visibility:hidden")
 		#mySidenav.sidenav
-			a.closebtn(href='javascript:void(0)', onclick='closeNav()') &times;
+			a.closebtn(href='/', onclick='closeNav()') &times;
+			//- javascript:void(0)
 			a(href="#main", alt="Home", onclick='closeNav()') Home
 			a(href="#section-about", alt="About", onclick='closeNav()') About
 			a(href="#section-how-work", alt="Services", onclick='closeNav()') Services
@@ -87,9 +88,9 @@ html(lang="en-GB")
 											li.glide__slide
 												.card#card-about-3
 									.glide__bullets(data-glide-el="controls[nav]")
-										button.glide__bullet(data-glide-dir="=0")
-										button.glide__bullet(data-glide-dir="=1")
-										button.glide__bullet(data-glide-dir="=2")
+										button.glide__bullet(data-glide-dir="=0", aria-label="About Category: Listening to understanding")
+										button.glide__bullet(data-glide-dir="=1", aria-label="About Category: Design thinking to solving problem creatively")
+										button.glide__bullet(data-glide-dir="=2", aria-label="About Category: Creative solution with various option of design or development")
 							.col-12.col-sm-12.col-md-12.col-lg-6
 								span.before-title ABOUT US
 								h2 We are Hyperfantasy <br/>Let’s work together!
