--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -116,8 +116,8 @@ html(lang="en-GB")
 								img(src="assets/img/icon/printer.svg", width=36, height=36, alt="Hyperfantasy Graphic Design")
 								h2 Graphic Design
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/chrome.svg", width=36, height=36, alt="Hyperfantasy Work - Branding")
-								h2 Branding
+								img(src="assets/img/icon/chrome.svg", width=36, height=36, alt="Hyperfantasy Work - Brand Identity")
+								h2 Brand Identity
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
 								img(src="assets/img/icon/layout.svg", width=36, height=36, alt="Hyperfantasy Work - Web Development")
 								h2 Web Development
