--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -225,7 +225,7 @@ html(lang="en-GB")
 												img(src="https://api.konsulaja.id/public/download/QXJtYW5kby1DaGFuZHJhLVBob3RvLV9ORVdfLmpwZWc=1642961218", alt="Photo", width=245, height=320)
 											.col-12.col-sm-12.col-md-12.col-lg-8
 												span.icon-quote
-												p The quality of the deliverables produced was satisfactory as Hyperfantasy did manage the complete the project within a relatively short period of time given the urgency of the project. Given the numerous requests from us, Hyperfantasy remained professional throughout the project and responded to our inputs in a structure manner in Figma.
+												p The quality of the deliverables produced was satisfactory as Hyperfantasy did manage the complete the project within a relatively short period of time given the urgency of the project. Given the numerous requests from us, Hyperfantasy remained professional throughout the project &amp; responded to our inputs in a structure manner in Figma.
 												.testimony-identity
 													span.testimony-name Armando Chandra
 													span.testimony-role Co-founder &amp; CEO of KonsulAja
