--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -5,7 +5,7 @@ html(lang="en-GB")
 		title Hyperfantasy: Design &amp; Development Team
 		meta(name="robots", content="index, follow")
 		meta(name="og:title", property="og:title", content="Hyperfantasy Design &amp; Development Team")
-		meta(name="description", content="We are Hyperfantasy, we are creative team that love to solve problem &amp; building awesome digital products. Let’s work together!")
+		meta(name="description", content="We are Hyperfantasy, we are creative team that love to solve problem &amp; building awesome digital products. Let&rsquo;s work together!")
 		meta(charset='utf-8')
 		meta(http-equiv='X-UA-Compatible', content='IE=edge')
 		meta(http-equiv='Cache-Control: max-age=31536000', content='public')
