--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -263,9 +263,23 @@ html(lang="en-GB")
 										li
 											a(class="icon-link", href="https://dribbble.com/hyperfantasy", alt="Dribbble", aria-label="Dribbble")
 												span(class="icon", id="icon-dribbble")
-			
 										li
 											a(class="icon-link", href="https://www.instagram.com/hyperfantasy.creative", alt="Instagram", aria-label="Instagram")
+												span(class="icon", id="icon-instagram")
+										li
+											a(class="icon-link", href="http://t.me/hyperfantasy", alt="Telegram", aria-label="Telegram")
+												span(class="icon", id="icon-instagram")
+										li
+											a(class="icon-link", href="https://join.skype.com/invite/u34BtU0hDGXK", alt="Skype", aria-label="Skype")
+												span(class="icon", id="icon-instagram")
+										li
+											a(class="icon-link", href="https://www.linkedin.com/in/hyperfantasy/", alt="Linkedin", aria-label="Linkedin")
+												span(class="icon", id="icon-instagram")
+										li
+											a(class="icon-link", href="https://twitter.com/hyperfantasy_", alt="Twitter", aria-label="Twitter")
+												span(class="icon", id="icon-instagram")
+										li
+											a(class="icon-link", href="https://www.facebook.com/hyperfantasycreative", alt="Facebook", aria-label="Facebook")
 												span(class="icon", id="icon-instagram")
 	script(src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.2.0/glide.min.js")
 	script(type='text/javascript', src='./main.js')
