new social links

--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -280,6 +280,6 @@ html(lang="en-GB")
 												span(class="icon", id="icon-instagram")
 										li
 											a(class="icon-link", href="https://www.facebook.com/hyperfantasycreative", alt="Facebook", aria-label="Facebook")
-												span(class="icon", id="icon-instagram")
+												span(class="icon", id="icon-facebook")
 	script(src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.2.0/glide.min.js")
 	script(type='text/javascript', src='./main.js')
