new social links

--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -268,16 +268,16 @@ html(lang="en-GB")
 												span(class="icon", id="icon-instagram")
 										li
 											a(class="icon-link", href="http://t.me/hyperfantasy", alt="Telegram", aria-label="Telegram")
-												span(class="icon", id="icon-instagram")
+												span(class="icon", id="icon-telegram")
 										li
 											a(class="icon-link", href="https://join.skype.com/invite/u34BtU0hDGXK", alt="Skype", aria-label="Skype")
-												span(class="icon", id="icon-instagram")
+												span(class="icon", id="icon-skype")
 										li
 											a(class="icon-link", href="https://www.linkedin.com/in/hyperfantasy/", alt="Linkedin", aria-label="Linkedin")
-												span(class="icon", id="icon-instagram")
+												span(class="icon", id="icon-linkedin")
 										li
 											a(class="icon-link", href="https://twitter.com/hyperfantasy_", alt="Twitter", aria-label="Twitter")
-												span(class="icon", id="icon-instagram")
+												span(class="icon", id="icon-twitter")
 										li
 											a(class="icon-link", href="https://www.facebook.com/hyperfantasycreative", alt="Facebook", aria-label="Facebook")
 												span(class="icon", id="icon-facebook")
