--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -273,7 +273,7 @@ html(lang="en-GB")
 											a(class="icon-link", href="https://join.skype.com/invite/u34BtU0hDGXK", alt="Skype", aria-label="Skype")
 												span(class="icon", id="icon-skype")
 										li
-											a(class="icon-link", href="https://www.linkedin.com/in/hyperfantasy/", alt="Linkedin", aria-label="Linkedin")
+											a(class="icon-link", href="https://www.linkedin.com/in/hyperfantasy/", alt="LinkedIn", aria-label="LinkedIn")
 												span(class="icon", id="icon-linkedin")
 										li
 											a(class="icon-link", href="https://twitter.com/hyperfantasy_", alt="Twitter", aria-label="Twitter")
