new social links

--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -387,9 +387,19 @@ footer
                             li
                                 a
                                     #icon-dribbble
-                                        background-image: url('https://hyperfantasy.co/assets/styles/images/icon-social-media-dribbble.png')
+                                        background-image: url('./assets/icon/icon-social-media/icon-social-media-dribbble.png')
                                     #icon-instagram
-                                        background-image: url('https://hyperfantasy.co/assets/styles/images/icon-social-media-instagram.png')
+                                        background-image: url('./assets/icon/icon-social-media/icon-social-media-instagram.png')
+                                    #icon-telegram
+                                        background-image: url('./assets/icon/icon-social-media/icon-social-media-telegram.png')
+                                    #icon-skype
+                                        background-image: url('./assets/icon/icon-social-media/icon-social-media-skype.png')
+                                    #icon-linkedin
+                                        background-image: url('./assets/icon/icon-social-media/icon-social-media-linkedin.png')
+                                    #icon-twitter
+                                        background-image: url('./assets/icon/icon-social-media/icon-social-media-twitter.png')
+                                    #icon-facebook
+                                        background-image: url('./assets/icon/icon-social-media/icon-social-media-facebook.png')
                             li:first-child
                                 padding: 0 0
                                 margin-right: 10px
