--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -198,7 +198,8 @@ html(lang="en-GB")
 												p Hyperfantasy is a motivated, forward thinking and also intelligent UI Designer team with lots of knowledge in his field. Proactive, energetic and totally organized. Hyperfantasy always maintains very good relation with co-workers and clients. They learns quickly and I would have no hesitation in working with Hyperfantasy once again in the future.
 												.testimony-identity
 													span.testimony-name Anna Jihad F.
-													span.testimony-role Founder Wolftagon &amp; Former Project Manager at FXmedia
+													span.testimony-role Founder Wolftagon
+													//-  &amp; Former Project Manager at FXmedia
 									li.glide__slide
 										.row
 											.col-12.col-sm-12.col-md-12.col-lg-4
