--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -387,25 +387,45 @@ footer
                             li
                                 a
                                     #icon-dribbble
-                                        background-image: url('./assets/icon/icon-social-media/icon-social-media-dribbble.png')
+                                        background-image: url('./assets/img/icon/icon-social-media/icon-social-media-dribbble.png')
                                     #icon-instagram
-                                        background-image: url('./assets/icon/icon-social-media/icon-social-media-instagram.png')
+                                        background-image: url('./assets/img/icon/icon-social-media/icon-social-media-instagram.png')
                                     #icon-telegram
-                                        background-image: url('./assets/icon/icon-social-media/icon-social-media-telegram.png')
+                                        background-image: url('./assets/img/icon/icon-social-media/icon-social-media-telegram.png')
                                     #icon-skype
-                                        background-image: url('./assets/icon/icon-social-media/icon-social-media-skype.png')
+                                        background-image: url('./assets/img/icon/icon-social-media/icon-social-media-skype.png')
                                     #icon-linkedin
-                                        background-image: url('./assets/icon/icon-social-media/icon-social-media-linkedin.png')
+                                        background-image: url('./assets/img/icon/icon-social-media/icon-social-media-linkedin.png')
                                     #icon-twitter
-                                        background-image: url('./assets/icon/icon-social-media/icon-social-media-twitter.png')
+                                        background-image: url('./assets/img/icon/icon-social-media/icon-social-media-twitter.png')
                                     #icon-facebook
-                                        background-image: url('./assets/icon/icon-social-media/icon-social-media-facebook.png')
+                                        background-image: url('./assets/img/icon/icon-social-media/icon-social-media-facebook.png')
                             li:first-child
                                 padding: 0 0
                                 margin-right: 10px
                     li:first-child
                         font-size: 12px
                         margin-right: 28px
+@media (min-width: 992px)
+    footer
+        .container
+            .row
+                .col-md-5:last-child
+                    ul
+                        li
+                            padding-right: 0
+                            ul
+                                li
+                                    display: none
+                                li:nth-child(1),li:nth-child(2)
+                                    display: flex
+                                    a
+                                        span
+                                            display: none
+                                        #icon-dribbble
+                                            display: flex
+                                        #icon-instagram
+                                            display: flex
 @media (max-width: 992px)
     header
         .container
@@ -500,6 +520,7 @@ footer
                             li 
                                 padding: 1em
                                 margin: 0
+                                display: flex
 @media (max-width: 768px)
     header
         .container
@@ -565,3 +586,11 @@ footer
                         flex-direction: column
                 .col-md-5:first-child
                     display: none
+                .col-md-5:last-child
+                    ul
+                        li
+                            ul
+                                li
+                                    display: flex
+                                    margin: 0
+                                    padding: 0.65em
