--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -150,7 +150,8 @@ html(lang="en-GB")
 								span Healthy App
 								h3 BOKIA 
 									//- span (Buku Online Kesehatan Ibu &amp; Anak)
-								p Online version of Mother &amp; Child Health Book for pregnant women, used by information &amp; media for recording fetal &amp; children&apos;s growth &amp; development.
+								p Online version of Mother &amp; Child Health Book for pregnant women, used by information &amp; media for recording fetal &amp; children&apos;s growth.
+								//- &amp; development.
 							.col-12.col-sm-12.col-md-12.col-lg-6
 								img(src="assets/img/skew-photo-3.png", width=368, height=400, alt="BOKIA")
 				.section.section-shots#section-shots
