--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -94,7 +94,7 @@ html(lang="en-GB")
 								span.before-title ABOUT US
 								h2 We are Hyperfantasy <br/>Let’s work together!
 								p We are creative team that love to solve problem &amp; building awesome digital products.
-								span.steps Listening   <span>+</span>   Design Thinking   <span>+</span>   Creative Solution
+								span.steps Listening &nbsp; <span>+</span> &nbsp; Design Thinking &nbsp; <span>+</span> &nbsp; Creative Solution
 				.section.section-how-work#section-how-work
 					.container
 						span.before-title WHAT WE DO
