--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -207,7 +207,7 @@ html(lang="en-GB")
 												img(src="assets/img/photo-testimony-2.png", alt="Photo", width=245, height=320)
 											.col-12.col-sm-12.col-md-12.col-lg-8
 												span.icon-quote
-												p Hyperfantasy is a rare &amp; outstanding talents I have ever worked with. I've worked with them to develop UI/UX for an app &amp; website. I was very impressed with his ability to translate a brief requirement into an awesome UI/UX design. They was always able to complete the task in a timely manner or even faster than the expected target. Great manner &amp; professionalism during our cooperation.
+												p Hyperfantasy is a rare &amp; outstanding talents I have ever worked with. I've worked with them to develop UI/UX for an app &amp; website. I was very impressed with their ability to translate a brief requirement into an awesome UI/UX design. They was always able to complete the task in a timely manner or even faster than the expected target. Great manner &amp; professionalism during our cooperation.
 												.testimony-identity
 													span.testimony-name Cokorda Gde Dwipa Susila
 													span.testimony-role Head of Shipping &amp; Export Import at PT Freeport Indonesia
