--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -92,7 +92,7 @@ html(lang="en-GB")
 										button.glide__bullet(data-glide-dir="=2", aria-label="About Category: Creative solution with various option of design or development")
 							.col-12.col-sm-12.col-md-12.col-lg-6
 								span.before-title ABOUT US
-								h2 We are Hyperfantasy <br/>Let’s work together!
+								h2 We are Hyperfantasy <br/>Let&apos;s work together!
 								p We are creative team that love to solve problem &amp; building awesome digital products.
 								span.steps Listening &nbsp; <span>+</span> &nbsp; Design Thinking &nbsp; <span>+</span> &nbsp; Creative Solution
 				.section.section-how-work#section-how-work
