--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -196,7 +196,7 @@ html(lang="en-GB")
 												img(src="assets/img/photo-testimony-1.png", alt="Photo", width=245, height=320)
 											.col-12.col-sm-12.col-md-12.col-lg-8
 												span.icon-quote
-												p Hyperfantasy is a motivated, forward thinking &amp; also intelligent UI Designer team with lots of knowledge in their field. Proactive, energetic and totally organized. Hyperfantasy always maintains very good relation with co-workers &amp; clients. They learns quickly and I would have no hesitation in working with Hyperfantasy once again in the future.
+												p Hyperfantasy is a motivated, forward thinking &amp; also intelligent UI Designer team with lots of knowledge in their field. Proactive, energetic &amp; totally organized. Hyperfantasy always maintains very good relation with co-workers &amp; clients. They learns quickly &amp; I would have no hesitation in working with Hyperfantasy once again in the future.
 												.testimony-identity
 													span.testimony-name Anna Jihad F.
 													span.testimony-role Founder Wolftagon
@@ -217,7 +217,7 @@ html(lang="en-GB")
 												img(src="assets/img/photo-testimony-3.png", alt="Photo", width=245, height=320)
 											.col-12.col-sm-12.col-md-12.col-lg-8
 												span.icon-quote
-												p I have been consistently impressed with Hyperfantasy talents, efficiency, &amp; ability to get things done. I believe that their would be an excellent addition to your design projects. Hyperfantasy constantly seeks to learn more about illustration, UI/UX trends and latest tools in the industry &amp; also a quick learner who picks up new technology with great speed.
+												p I have been consistently impressed with Hyperfantasy talents, efficiency, &amp; ability to get things done. I believe that their would be an excellent addition to your design projects. Hyperfantasy constantly seeks to learn more about illustration, UI/UX trends &amp; latest tools in the industry &amp; also a quick learner who picks up new technology with great speed.
 												.testimony-identity
 													span.testimony-name Anas Al-Suhaim
 													span.testimony-role Founder &amp; CTO of Tammwel
