image alternative text

--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -193,7 +193,7 @@ html(lang="en-GB")
 									li.glide__slide
 										.row
 											.col-12.col-sm-12.col-md-12.col-lg-4
-												img(src="assets/img/photo-testimony-1.png", alt="Photo", width=245, height=320)
+												img(src="assets/img/photo-testimony-1.png", alt="Anna Jihad F.", width=245, height=320)
 											.col-12.col-sm-12.col-md-12.col-lg-8
 												span.icon-quote
 												p Hyperfantasy is a motivated, forward thinking &amp; also intelligent UI Designer team with lots of knowledge in their field. Proactive, energetic &amp; totally organized. Hyperfantasy always maintains very good relation with co-workers &amp; clients. They learns quickly &amp; I would have no hesitation in working with Hyperfantasy once again in the future.
@@ -204,7 +204,7 @@ html(lang="en-GB")
 									li.glide__slide
 										.row
 											.col-12.col-sm-12.col-md-12.col-lg-4
-												img(src="assets/img/photo-testimony-2.png", alt="Photo", width=245, height=320)
+												img(src="assets/img/photo-testimony-2.png", alt="Cokorda Gde Dwipa Susila", width=245, height=320)
 											.col-12.col-sm-12.col-md-12.col-lg-8
 												span.icon-quote
 												p Hyperfantasy is a rare &amp; outstanding talents I have ever worked with. I've worked with them to develop UI/UX for an app &amp; website. I was very impressed with their ability to translate a brief requirement into an awesome UI/UX design. They was always able to complete the task in a timely manner or even faster than the expected target. Great manner &amp; professionalism during our cooperation.
@@ -214,7 +214,7 @@ html(lang="en-GB")
 									li.glide__slide
 										.row
 											.col-12.col-sm-12.col-md-12.col-lg-4
-												img(src="assets/img/photo-testimony-3.png", alt="Photo", width=245, height=320)
+												img(src="assets/img/photo-testimony-3.png", alt="Anas Al-Suhaim", width=245, height=320)
 											.col-12.col-sm-12.col-md-12.col-lg-8
 												span.icon-quote
 												p I have been consistently impressed with Hyperfantasy talents, efficiency, &amp; ability to get things done. I believe that their would be an excellent addition to your design projects. Hyperfantasy constantly seeks to learn more about illustration, UI/UX trends &amp; latest tools in the industry &amp; also a quick learner who picks up new technology with great speed.
@@ -224,7 +224,7 @@ html(lang="en-GB")
 									li.glide__slide
 										.row
 											.col-12.col-sm-12.col-md-12.col-lg-4
-												img(src="https://api.konsulaja.id/public/download/QXJtYW5kby1DaGFuZHJhLVBob3RvLV9ORVdfLmpwZWc=1642961218", alt="Photo", width=245, height=320)
+												img(src="https://api.konsulaja.id/public/download/QXJtYW5kby1DaGFuZHJhLVBob3RvLV9ORVdfLmpwZWc=1642961218", alt="Armando Chandra", width=245, height=320)
 											.col-12.col-sm-12.col-md-12.col-lg-8
 												span.icon-quote
 												p The quality of the deliverables produced was satisfactory as Hyperfantasy did manage the complete the project within a relatively short period of time given the urgency of the project. Given the numerous requests from us, Hyperfantasy remained professional throughout the project &amp; responded to our inputs in a structure manner in Figma.
