image alternative text

--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -48,7 +48,7 @@ html(lang="en-GB")
 				.container
 					.row
 						.col-10.col-sm-10.col-md-3.col-lg-3
-							img(src="assets/img/logo-hyperfantasy-pictogram.svg", width=56, height=52.69, alt="Hyperfantasy Logo")
+							img(src="assets/img/logo-hyperfantasy-pictogram.svg", width=56, height=52.69, alt="Hyperfantasy Logo", aria-label="Hyperfantasy Logo")
 						.col-2.col-sm-2.col-md-6.col-lg-6
 							span#icon-burger(style='font-size:30px;cursor:pointer', onclick='openNav()') &#x2630;
 							ul
@@ -113,7 +113,7 @@ html(lang="en-GB")
 								img(src="assets/img/icon/codesandbox.svg", width=36, height=36, alt="Hyperfantasy Work - 3D Design")
 								h2 3D Design
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/printer.svg", width=36, height=36, alt="Hyperfantasy Graphic Design")
+								img(src="assets/img/icon/printer.svg", width=36, height=36, alt="Hyperfantasy - Graphic Design")
 								h2 Graphic Design
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
 								img(src="assets/img/icon/chrome.svg", width=36, height=36, alt="Hyperfantasy Work - Brand Identity")
