image alternative text

--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -101,31 +101,31 @@ html(lang="en-GB")
 						h2 Some of the solutions we offer
 						.row
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/airplay.svg", width=36, height=36, alt="Hyperfantasy Work - UI Design")
+								img(src="assets/img/icon/airplay.svg", width=36, height=36, alt="Hyperfantasy Work - UI Design", aria-label="Hyperfantasy Work - UI Design")
 								h2 UI Design
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/smile.svg", width=36, height=36, alt="Hyperfantasy Work - UX Design")
+								img(src="assets/img/icon/smile.svg", width=36, height=36, alt="Hyperfantasy Work - UX Design", aria-label="Hyperfantasy Work - UX Design")
 								h2 UX Design
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/image.svg", width=36, height=36, alt="Hyperfantasy Work - Illustration")
+								img(src="assets/img/icon/image.svg", width=36, height=36, alt="Hyperfantasy Work - Illustration", aria-label="Hyperfantasy Work - Illustration")
 								h2 Illustration
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/codesandbox.svg", width=36, height=36, alt="Hyperfantasy Work - 3D Design")
+								img(src="assets/img/icon/codesandbox.svg", width=36, height=36, alt="Hyperfantasy Work - 3D Design", aria-label="Hyperfantasy Work - 3D Design")
 								h2 3D Design
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/printer.svg", width=36, height=36, alt="Hyperfantasy - Graphic Design")
+								img(src="assets/img/icon/printer.svg", width=36, height=36, alt="Hyperfantasy - Graphic Design", aria-label="Hyperfantasy - Graphic Design")
 								h2 Graphic Design
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/chrome.svg", width=36, height=36, alt="Hyperfantasy Work - Brand Identity")
+								img(src="assets/img/icon/chrome.svg", width=36, height=36, alt="Hyperfantasy Work - Brand Identity", aria-label="Hyperfantasy Work - Brand Identity")
 								h2 Brand Identity
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/layout.svg", width=36, height=36, alt="Hyperfantasy Work - Web Development")
+								img(src="assets/img/icon/layout.svg", width=36, height=36, alt="Hyperfantasy Work - Web Development", aria-label="Hyperfantasy Work - Web Development")
 								h2 Web Development
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/smartphone.svg", width=36, height=36, alt="Hyperfantasy Work - Mobile App Dev.")
+								img(src="assets/img/icon/smartphone.svg", width=36, height=36, alt="Hyperfantasy Work - Mobile App Dev.", aria-label="Hyperfantasy Work - Mobile App Dev.")
 								h2 Mobile App Dev.
 							.icon-item.col-xs-5.col-sm-4.col-md-3.col-lg-2
-								img(src="assets/img/icon/play-circle.svg", width=36, height=36, alt="Hyperfantasy Work - Micro Motion")
+								img(src="assets/img/icon/play-circle.svg", width=36, height=36, alt="Hyperfantasy Work - Micro Motion", aria-label="Hyperfantasy Work - Micro Motion")
 								h2 Micro Motion
 				.section.section-works#section-works
 					.container
