--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -122,7 +122,7 @@ html(lang="en-GB")
 								img(src="assets/img/icon/layout.svg", width=36, height=36, alt="Hyperfantasy Work - Web Development", aria-label="Hyperfantasy Work - Web Development")
 								h2 Web Development
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/smartphone.svg", width=36, height=36, alt="Hyperfantasy Work - Mobile App Dev.", aria-label="Hyperfantasy Work - Mobile App Dev.")
+								img(src="assets/img/icon/smartphone.svg", width=36, height=36, alt="Hyperfantasy Work - Mobile App Dev.", aria-label="Hyperfantasy Work - Mobile App Dev")
 								h2 Mobile App Dev.
 							.icon-item.col-xs-5.col-sm-4.col-md-3.col-lg-2
 								img(src="assets/img/icon/play-circle.svg", width=36, height=36, alt="Hyperfantasy Work - Micro Motion", aria-label="Hyperfantasy Work - Micro Motion")
