--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -166,7 +166,7 @@ html(lang="en-GB")
 							.col-12.col-sm-6.col-md-6.col-lg-4
 								img(src="assets/img/NFTy-square-web-1.png", alt="NFTy Website Landing Page", width=350, height=350)
 						.row.flex-center
-							a.button.ghost(href="https://www.instagram.com/hyperfantasy.creative", target="_blank", alt="Portfolio") Portfolio
+							a.button.ghost(href="https://www.instagram.com/hyperfantasy.creative", target="_blank", alt="Portfolio", aria-label="Portfolio") Portfolio
 				.section.section-clients#section-clients
 					.container
 						//- h2 Clients
