--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -224,13 +224,23 @@ html(lang="en-GB")
 									li.glide__slide
 										.row
 											.col-12.col-sm-12.col-md-12.col-lg-4
-												img(src="https://api.konsulaja.id/public/download/QXJtYW5kby1DaGFuZHJhLVBob3RvLV9ORVdfLmpwZWc=1642961218", alt="Armando Chandra", width=245, height=320)
+												img(src="assets/img/photo-testimony-4.png", alt="Armando Chandra", width=245, height=320)
 											.col-12.col-sm-12.col-md-12.col-lg-8
 												span.icon-quote
 												p The quality of the deliverables produced was satisfactory as Hyperfantasy did manage the complete the project within a relatively short period of time given the urgency of the project. Given the numerous requests from us, Hyperfantasy remained professional throughout the project &amp; responded to our inputs in a structure manner in Figma.
 												.testimony-identity
 													span.testimony-name Armando Chandra
 													span.testimony-role Co-founder &amp; CEO of KonsulAja
+									li.glide__slide
+										.row
+											.col-12.col-sm-12.col-md-12.col-lg-4
+												img(src="assets/img/photo-testimony-5.png", alt="Mubarak Al-Nabit", width=245, height=320)
+											.col-12.col-sm-12.col-md-12.col-lg-8
+												span.icon-quote
+												p Very creative and resourceful. I give 10/10 for the service provided by Hyperfantasy. They are very communicative, good collaboration and all managed very properly. I worked with Hyperfantasy to build a mobile app, dashboard for back office and website landing page, all done very well. Highly recommended for those who want "creativity".
+												.testimony-identity
+													span.testimony-name Mubarak Al-Nabit
+													span.testimony-role Founder of ezLaundry - Qatar
 							div.slider-controls(data-glide-el="controls")
 								button.slider-arrow(data-glide-dir="<") ‹
 								button.slider-arrow(data-glide-dir=">") ›
