--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -237,6 +237,7 @@ html(lang="en-GB")
 												img(src="assets/img/photo-testimony-5.png", alt="Mubarak Al-Nabit", width=245, height=320)
 											.col-12.col-sm-12.col-md-12.col-lg-8
 												span.icon-quote
+												//- p Very creative and resourceful. I give 10/10 for the service provided by Adin. He is very communicative, good collaboration &amp; all managed very properly. I worked with Adin to build a mobile app, dashboard for back office &amp; website landing page, all done very well. Highly recommended for those who want "creativity".
 												p Very creative and resourceful. I give 10/10 for the service provided by Hyperfantasy. They are very communicative, good collaboration &amp; all managed very properly. I worked with Hyperfantasy to build a mobile app, dashboard for back office &amp; website landing page, all done very well. Highly recommended for those who want "creativity".
 												.testimony-identity
 													span.testimony-name Mubarak Al-Nabit
